--- a/CookPopularControl/Themes/SearchBarStyle.xaml
+++ b/CookPopularControl/Themes/SearchBarStyle.xaml
@@ -8,14 +8,14 @@
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/BaseStyle/ControlsBaseStyle.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
-    <Style x:Key="DefaultSearchControlStyle" TargetType="{x:Type pc:SearchControl}" BasedOn="{StaticResource DefaultAttachedIconControlBaseStyle}">
-        <Setter Property="Height" Value="28" />
+    <Style x:Key="DefaultSearchBarStyle" TargetType="{x:Type pc:SearchBar}" BasedOn="{StaticResource DefaultAttachedIconControlBaseStyle}">
+        <Setter Property="Height" Value="{DynamicResource DefaultControlHeight}" />
         <Setter Property="BorderBrush" Value="{DynamicResource FieldBorderBrush}" />
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="Validation.ErrorTemplate" Value="{DynamicResource ValidationErrorBaseTemplate}" />
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type pc:SearchControl}">
+                <ControlTemplate TargetType="{x:Type pc:SearchBar}">
                     <Border x:Name="RootBorder"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}"
@@ -27,7 +27,7 @@
                                 <ColumnDefinition />
                                 <ColumnDefinition Width="Auto" />
                             </Grid.ColumnDefinitions>
-                            <TextBox Grid.Column="0"
+                            <TextBox Grid.Column="0" Background="Transparent"
                                      Text="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=Content, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                      BorderThickness="0"
                                      common:FrameworkElementBaseAttached.IconHeight="{TemplateBinding common:FrameworkElementBaseAttached.IconHeight}"
@@ -41,7 +41,7 @@
                                     common:FrameworkElementBaseAttached.IconGeometry="{DynamicResource SearchGeometry}"
                                     common:FrameworkElementBaseAttached.IconHeight="15"
                                     common:FrameworkElementBaseAttached.IconWidth="15"
-                                    Command="{x:Static pc:SearchControl.SearchCommand}"
+                                    Command="{x:Static pc:SearchBar.SearchCommand}"
                                     Style="{DynamicResource ButtonTransparentIconStyle}" />
                         </Grid>
                     </Border>
@@ -64,7 +64,7 @@
         </Setter>
     </Style>
 
-    <Style x:Key="SearchControlAddClearButtonStyle" TargetType="{x:Type pc:SearchControl}" BasedOn="{StaticResource DefaultSearchControlStyle}">
+    <Style x:Key="SearchBarAddClearButtonStyle" TargetType="{x:Type pc:SearchBar}" BasedOn="{StaticResource DefaultSearchBarStyle}">
         <Setter Property="common:TextElementAttached.IsAddClearButton" Value="True" />
     </Style>
 
